CDS-2641 Resolved image overlapping issue TA.

--- a/app/assets/stylesheets/base/_tiles.scss
+++ b/app/assets/stylesheets/base/_tiles.scss
@@ -447,11 +447,15 @@ section {
   &:first-child {
     margin: -60px 0 60px;
 
+    @media screen and (max-width: $screen-sm-max) {
+      margin: -30px 0;
+    }
+
     @media screen and (max-width: $screen-xs-min) {
       margin: -30px 0 30px;
     }
 
-    @media screen and (min-width: $screen-sm-min) {
+    @media screen and (min-width: $screen-sm-max) {
       margin: -84px 0;
     }
   }
@@ -459,11 +463,15 @@ section {
   &:last-child {
     margin: 75px 0 -60px;
 
+    @media screen and (max-width: $screen-sm-max) {
+      margin: -30px 0;
+    }
+
     @media screen and (max-width: $screen-xs-min) {
       margin: 30px 0 -30px;
     }
 
-    @media screen and (min-width: $screen-sm-min) {
+    @media screen and (min-width: $screen-sm-max) {
       margin: -84px 0;
     }
   }
